--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "fabric": "^6.6.1",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^19.0.0",
